# 57-exercises-for-programmers

./: .gitignore  02-numchars.hs  05-maths.hs  06-retirement.hs  07-roomarea.hs  09-paint.hs  10-checkout.hs  12-simpleinterest.hs  15-passwords.hs  16-drivingage.hs  17-bloodalcohol.hs  19-bmi.hs  20-statetax.hs  21-numtoname.hs  24-anagrams.hs  57exercises.cabal  README  README.md  employeeList.txt  productCatalogue.json  runtests.sh  stack.yaml  tipcalc.hs
app/: Main.hs
src/: 01-hello.hs  03-quotes.hs  04-madlib.hs  08-pizza.hs  11-currency.hs  13-compoundinterest.hs  14-taxcalc.hs  18-tempconverter.hs  22-cmpnums.hs  24-anagrams.hs  25-passwordstrength.hs  Config.hs  Library.hs  P01Hello.hs  P02NumChars.hs  P03Quotes.hs  P04Madlib.hs  P05Maths.hs  P06Retirement.hs  P07RoomArea.hs  P09Paint.hs  P10Checkout.hs  P11Currency.hs  P12SimpleInterest.hs  P13CompoundInterest.hs  P14TaxCalc.hs  P15Passwords.hs  P16DrivingAge.hs  P17BloodAlcohol.hs  P18TempConverter.hs  P19BMI.hs  P20StateTax.hs  P21NumToName.hs  P22CompNums.hs  P23CarTroubles.hs  P24Anagram.hs  P25PwStrength.hs  P26PayOff.hs  P28Sum.hs  P29Input.hs  (+22 more)
t/: .P25PwStrengthSpec.hs.swp  LibrarySpec.hs  P01HelloSpec.hs  P03QuotesSpec.hs  P04MadlibSpec.hs  P05MathsSpec.hs  P07RoomAreaSpec.hs  P09PaintSpec.hs  P10CheckoutSpec.hs  P12SimpleInterestSpec.hs  P13CompoundInterestSpec.hs  P14TaxCalcSpec.hs  P15PasswordsSpec.hs  P16DrivingAgeSpec.hs  P17BloodAlcoholSpec.hs  P24AnagramSpec.hs  P25PwStrengthSpec.hs  P26PayOffSpec.hs  P31KarvonenHRSpec.hs  P32GuessNumSpec.hs  P33Magic8BallSpec.hs  P34RemployeeSpec.hs  P35WinnerSpec.hs  P36StatsSpec.hs  P37PasswordGenSpec.hs  P38FilterSpec.hs  P39SortSpec.hs  P42ParsingSpec.hs  P46WordFreqSpec.hs
test/: LibrarySpec.hs  P02NumCharsSpec.hs  P05MathsSpec.hs  P06RetirementSpec.hs  P08PizzaSpec.hs  P11CurrencySpec.hs  P14TaxCalcSpec.hs  P18TempConverterSpec.hs  P19BMISpec.hs  P21NumToNameSpec.hs  P22CompNumsSpec.hs  P23CarTroublesSpec.hs  P25PwStrengthSpec.hs  P28SumSpec.hs  P29InputSpec.hs  P30MultTblSpec.hs  P31KarvonenHRSpec.hs  P36StatsSpec.hs  P38FilterSpec.hs  P39SortSpec.hs  P40FilterRecSpec.hs  P42ParsingSpec.hs  P43WebsiteGenSpec.hs  P44ProductSearchSpec.hs  P45WordFinderSpec.hs  P46WordFreqSpec.hs  P48WeatherSpec.hs  P50MovieSpec.hs  P52TimeQuoteServerSpec.hs
websitegen/.skeleton/: index.hamlet
