name:                57exercises
version:             0.1.0.0
synopsis:            My solutions to the 57 exercises for programmers book
description:         Please see README.md
homepage:            http://github.com/githubuser/57ex#readme
license:             GPL-3
license-file:        LICENSE
author:              Charlie Harvey
maintainer:          Charlie Harvey
copyright:           2016 Charlie Harvey Here
category:            Learning
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , containers
                      , hspec
                      , hspec-wai
                      , time
                      , bytestring
                      , cassava
                      , http-conduit
                      , text
                      , vector
                      , array
                      , random
                      , aeson
                      , bcrypt
                      , digits
                      , split
                      , QuickCheck
                      , shakespeare
                      , blaze-html
                      , directory
                      , wreq
                      , lens
                      , lens-aeson
                      , scientific
                      , servant >= 0.5
                      , servant-server >= 0.5
                      , servant-client >= 0.5
                      , servant-docs   >= 0.5
                      , wai
                      , warp
                      , mtl
                      , transformers
                      , http-client
  default-language:    Haskell2010

--executable 57exercises-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , 57exercises
--  default-language:    Haskell2010

test-suite 57exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                      , 57exercises
                      , hspec
                      , hspec-wai
                      , containers
                      , digits
                      , time
                      , bytestring
                      , cassava
                      , http-conduit
                      , text
                      , vector
                      , array
                      , statistics
                      , random
                      , aeson
                      , bcrypt
                      , hspec
                      , split
                      , QuickCheck
                      , shakespeare
                      , blaze-html
                      , directory
                      , wreq
                      , lens
                      , lens-aeson
                      , scientific
                      , servant
                      , servant-server
                      , servant-client
                      , servant-docs
                      , wai
                      , warp
                      , mtl
                      , transformers
                      , http-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/57exercises
